[package]
name = "rap"
version = "0.1.0"
edition = "2021"

build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
threadpool = "1.8.1"
curl = "0.4.42"
capnp = "0.14.5"
byteorder = "1.4.3"
config = "0.13.1"

[build-dependencies]
capnpc = "0.14.7"
